2. Design Patterns/2. Behavioral/Strategy/Example/1. Duck Simulator/Bad/DuckSimulator_Bad/Mallard.cs
namespace DuckSimulator_Bad
{
    public class Mallard : Duck
    {
        public override void Display()
        {
            System.Console.WriteLine("Jestem kaczka krzyzowka");
        }
    }
}